--- a/html/example.html
+++ b/html/example.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!--<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style> -->
+<style>
+h1 {
+    color: blue;
+    font-family: verdana;
+    font-size: 250%;
+}
+p  {
+    color: red;
+    font-family: courier;
+    font-size: 100%;
+    border: 16px solid powderblue;
+    padding: 10px;
+   }
+#p01 {
+    color: blue;
+     }
+p.error{
+	color: green;
+       } 
+</style>>
 <title>my_first_page</title>>
 <body>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<a href="http://www.google.com"> This is a link</a>
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+<p class ="error"> Am i the only one in here?</p>>
+<p>This is a paragraph.</p>
+<p id="p01">I am different one.</p>
+<p class ="error"> I'm here too.</p>>
+<!--<a href="http://www.google.com"> This is a link</a>
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
 </body>
 </html>
-
+  
