--- a/html/example.html
+++ b/html/example.html
@@ -37,6 +37,19 @@ p.error{
 <p class ="error"> I'm here too.</p>>
 <!--<a href="http://www.google.com"> This is a link</a>
 <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
+<h1>My First JavaScript</h1>
+
+<p>JavaScript can change the content of an HTML element:</p>
+
+<button type="button" onclick="myFunction()">Click Me!</button>
+
+<p id="demo">This is a demonstration.</p>
+
+<script>
+function myFunction() { 
+    document.getElementById("demo").innerHTML = "Hello JavaScript!";
+}
+</script>
 </body>
 </html>
   
